<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fruteriafelix.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fruits"
        android:name="com.example.fruteriafelix.ui.fruits.FruitsFragment"
        android:label="Frutas"
        tools:layout="@layout/fragment_fruits" />

    <fragment
        android:id="@+id/nav_vegetables"
        android:name="com.example.fruteriafelix.ui.vegetables.VegetablesFragment"
        android:label="Vegetales"
        tools:layout="@layout/fragment_vegetables" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.fruteriafelix.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.fruteriafelix.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.fruteriafelix.ui.cart.CartFragment"
        android:label="Carrito"
        tools:layout="@layout/fragment_cart" />
</navigation>